packages/front-end/styles/global.scss
@import "colors.scss";

$font-size-base: 0.875rem !default; // change the default from 16px to 14px.
$h1-font-size: 1.5rem !default; //24px
$h2-font-size: 1.25rem !default; //20px
$h3-font-size: 1.125rem !default; //18px
$h4-font-size: 1rem !default; //16px
$h5-font-size: 0.875rem !default; //14px
$h6-font-size: $font-size-base !default;
$headings-font-weight: 600 !default;
$font-weight-bold: 600 !default;

$grid-gutter-width: 16px !default;
$badge-padding-y: 0.25em !default; // 3px for default size
$badge-padding-x: 0.584em !default; // 7px for default size

@import "bootstrap/scss/bootstrap.scss";
@import "react-bootstrap-typeahead/css/Typeahead.scss";
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap");

html,
body,
#__next,
main {
  height: 100%;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
  -webkit-font-smoothing: antialiased;
  background-color: $main-background;
  color: $main-black;
}

#block-menu-container {
  z-index: 990;
}

.main {
  padding-left: 240px;
  padding-top: 60px;

  &.present {
    padding: 0;
  }
  & > .container-fluid,
  & > .pagecontents {
    padding: 15px;
  }
}
.contents {
  padding: 15px;
}
.pagecontents {
  max-width: 1340px; /* add otherwise things start to look odd when very wide */
}
pre {
  font-size: 100%;
}
.text-blue {
  color: $second-blue;
}
.text-purple {
  color: $highlight-purple;
}
.text-indigo {
  color: $indigo;
}

// default bootstrap overrides:

.btn-primary {
  @include button-variant(
    $highlight-purple,
    darken($highlight-purple, 7.5%),
    darken($highlight-purple, 10%),
    lighten($highlight-purple, 5%),
    lighten($highlight-purple, 10%),
    darken($highlight-purple, 30%)
  );
}

.btn-outline-primary {
  //button-outline-variant($color, $color-hover: color-yiq($color), $active-background: $color, $active-border: $color
  @include button-outline-variant(
    $highlight-purple,
    #fff,
    lighten($highlight-purple, 0%),
    $highlight-purple
  );
}
.badge {
  line-height: 1em;
  font-size: 85.72%; //12px
  margin-bottom: 2px;
  font-weight: 700;
  .badge {
    margin-bottom: 0;
  }
}
.badge-primary {
  @include badge-variant(#00ace5);
  border: 1px solid rgba(23, 18, 33, 0.1);
}
.badge-gray {
  @include badge-variant(#f6f7f9);
  border: 1px solid $gray4;
}
.graybox {
  background-color: $gray6;
  padding: 15px 20px 20px;
  border-radius: 3px;
  border: 1px solid $gray5;
  label {
    font-weight: 600;
  }
}
.hover-highlight {
  transition: all 0.3s cubic-bezier(0.685, 0.0473, 0.346, 1);
  &:hover {
    background-color: rgba(124, 69, 234, 0.06);
  }
}
.modal {
  .modal-header {
    background-color: $gray5;
  }
  .rbt-token {
    background-color: rgba($highlight-purple, 0.1);
    color: $highlight-purple;
    font-weight: 600;
  }
}
.gbtable {
  color: $main-black;
  margin-bottom: 0;
  thead {
    th {
      font-size: 11px;
      text-transform: uppercase;
      font-weight: 600;
      color: #52597a;
      white-space: nowrap;
      border-bottom: 1px solid $gray4;
      border-top: 0;

      .activesort,
      .inactivesort {
        font-size: 13px;
      }
    }
  }
  td {
    vertical-align: middle;
  }
}

@media only screen and (max-width: 760px),
  (min-device-width: 768px) and (max-device-width: 1024px) {
  .responsive-table {
    display: block;
    border: 0;
    background-color: none;

    /* Force table to not be like tables anymore */
    table,
    thead,
    tbody,
    th,
    td,
    tr {
      display: block;
    }

    .nowrap {
      /* remove this so we can wrap */
      white-space: inherit;
    }

    /* Hide table headers (but not display: none;, for accessibility) */
    thead tr {
      position: absolute;
      top: -9999px;
      left: -9999px;
    }

    tr {
      border: 1px solid $gray2;
      margin-bottom: 1em;
    }

    td {
      /* Behave  like a "row" */
      border: none;
      border-bottom: 1px solid $gray4;
      position: relative;
      padding-left: 30%;
      min-height: 42px;
    }

    &.experiment-table {
      .testname {
        font-weight: 700;
      }
      .watching {
        display: none;
      }
    }

    td:before {
      /* Now like a table header */
      position: absolute;
      /* Top/left values mimic padding */
      top: 12px;
      left: 6px;
      width: 45%;
      padding-right: 10px;
      white-space: nowrap;
      content: attr(data-title);
      font-style: italic;
    }
  }
}

.pagination-area {
  border-top: 1px solid $gray4;
  padding: 10px;

  .pagination {
    .page-item {
      .page-link {
        line-height: 20px;
        padding: 5px 10px;
        text-align: center;
        border: 0;
        margin: 0 5px;
        font-weight: 600;
        color: $main-black;
      }
      .link-number {
        min-width: 30px;
        min-height: 30px;
        border-radius: 50%;
      }
      .link-text {
        svg {
          margin: 0 10px;
        }
      }
      &.active .page-link {
        color: #fff;
      }
      &.disabled .page-link {
        color: $gray2;
      }
    }
    //.active .page-link
  }
}
/* ... */

